fix: Collapse issue resolved caused by script tag having option module

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,13 +18,16 @@ body {
   }
 }
 
+.navbar {
+  display: flex;
+  background-color: #ffedd5;
+}
+
 @media (orientation: landscape) {
   .navbar {
     width: fit-content;
     height: 100%;
-    background-color: #faa;
 
-    display: flex;
     flex-direction: column;
     justify-content: start;
   }
@@ -34,9 +37,7 @@ body {
   .navbar {
     width: 100%;
     height: fit-content;
-    background-color: #faa;
 
-    display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
   }
@@ -64,6 +65,6 @@ body {
 .content {
   width: 100%;
   height: 100%;
-  background-color: #aaf;
+  background-color: #bbb;
 }
 
